--- a/Tugas_RPL/aduan.html
+++ b/Tugas_RPL/aduan.html
@@ -1,79 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Form Pengaduan</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-white text-slate-800">
 
-    <section class="w-full flex min-h-screen h-auto">
-        <div class="bg-slate-800 flex w-72 rounded-r-xl">
-            <nav class="flex flex-col w-full py-5 px-4 text-white">
-                <div class="flex mb-5 gap-3">
-                    <img src="assets/logo_Basdat.png" class="w-11 h-11">
-                    <h1 class="text-4xl">Sidebar</h1>
-                </div>
+  <section class="flex flex-col md:flex-row min-h-screen">
 
-                <ul class="flex flex-col gap-4">
-                    <li><a class="flex font-medium text-[17px] px-4 py-2 rounded transition-all duration-200 hover:bg-[#E5E7EB] hover:text-slate-800" href="#">Beranda</a></li>
-                    <li><a class="flex font-medium text-[17px] px-4 py-2 rounded transition-all duration-200 bg-[#E5E7EB] text-slate-800" href="aduan.html">Aduan</a></li>
-                    <li><a class="flex font-medium text-[17px] px-4 py-2 rounded transition-all duration-200 hover:bg-[#E5E7EB] hover:text-slate-800" href="riwayat_aduan.html">Riwayat</a></li>
-                </ul>
-            </nav>
+    <!-- Sidebar -->
+    <div class="bg-slate-800 w-full md:w-72 p-4 rounded-none md:rounded-r-xl">
+      <nav class="flex flex-col w-full md:py-5 py-2 px-4 text-white">
+        <div class="flex mb-5 gap-3 items-center">
+          <img src="assets/logo_Basdat.png" class="w-11 h-11">
+          <h1 class="md:text-3xl text-2xl font-semibold">Sidebar</h1>
         </div>
+        <ul class="md:flex flex md:flex-col justify-center flex-row md:gap-4 gap-2">
+          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 rounded transition-all duration-200 hover:bg-gray-200 hover:text-slate-800" href="#">Beranda</a></li>
+          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 rounded transition-all duration-200 bg-gray-200 text-slate-800" href="aduan.html">Aduan</a></li>
+          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 rounded transition-all duration-200 hover:bg-gray-200 hover:text-slate-800" href="riwayat_aduan.html">Riwayat</a></li>
+        </ul>
+      </nav>
+    </div>
 
-        <div class="text-center w-full flex flex-col gap-6 py-5 mt-5">
-            <h1 class="text-3xl font-semibold text-[#333446]">FORM PENGADUAN</h1>
-            <div class="border-b-4 border-b-orange-600 w-28 mx-auto"></div>
-                <div class="max-w-5xl mx-auto flex flex-col gap-2">
-                    <p class="text-gray-500">Silahkan mengisi fasilitas komunikasi Lapor kami. Mohon masukan dan pertanyaan disampaikan secara bijak dengan kata-kata yang baik. Komentar yang berupa spam, kata-kata kotor, link tidak bermanfaat tidak akan kami tampilkan.</p>
+    <!-- Main Content -->
+    <div class="flex-1 p-4 md:my-0 my-6 md:p-10 flex flex-col gap-6">
+      <div class="text-center flex flex-col gap-3">
+        <h1 class="text-2xl md:text-3xl font-semibold text-[#333446]">FORM PENGADUAN</h1>
+        <div class="border-b-4 border-orange-600 w-28 mx-auto my-2"></div>
+      </div>
 
-                    <div class="text-start mt-10">
-                    <form action="#" method="POST" class="space-y-6">
-                        <div class="">
-                            <label for="nama" class="block text-sm font-medium text-gray-700">Nama Lengkap</label>
-                            <input type="text" id="nama" name="nama" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm focus:border-gray-300 outline-none" placeholder="Masukkan nama Anda">
-                        </div>
+      <div class="max-w-4xl w-full mx-auto flex flex-col gap-4 px-2">
+        <p class="text-gray-500 text-sm md:text-base">
+          Silahkan mengisi fasilitas komunikasi Lapor kami. Mohon masukan dan pertanyaan disampaikan secara bijak dengan kata-kata yang baik. Komentar yang berupa spam, kata-kata kotor, link tidak bermanfaat tidak akan kami tampilkan.
+        </p>
 
-                        <div class="flex gap-4">
-                            <div class="flex-1">
-                                <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                                <input type="email" id="email" name="email" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm focus:border-gray-300 outline-none" placeholder="Masukan email Anda">
-                            </div>
-                            <div class="flex-1">
-                                <label for="telepon" class="block text-sm font-medium text-gray-700">Nomor Telepon</label>
-                                <input type="tel" id="telepon" name="telepon" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm focus:border-gray-300 outline-none" placeholder="08xxxxxxxxxx">
-                            </div>
-                        </div>
+        <form action="#" method="POST" enctype="multipart/form-data" class="space-y-6 mt-4">
+          <div>
+            <label for="nama" class="block text-sm font-medium text-gray-700">Nama Lengkap</label>
+            <input type="text" id="nama" name="nama" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm outline-none" placeholder="Masukkan nama Anda">
+          </div>
 
-                        <div>
-                            <label for="judul" class="block text-sm font-medium text-gray-700">Kategori</label>
-                            <select type="text" id="judul" name="judul" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm focus:border-gray-300 outline-none">
-                                <option class="block text-gray-700" value="">--Pilih Kategori--</option>
-                                <option value="">Keluhan</option>
-                                <option value="">Saran</option>
-                            </select>
-                        </div>
-
-                        <div>
-                            <label for="judul" class="block text-sm font-medium text-gray-700">Lampiran</label>
-                            <input type="file" name="gambar" accept="image/*" class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm focus:border-gray-300 outline-none" required>
-                        </div>
-
-                        <div>
-                            <label for="isi" class="block text-sm font-medium text-gray-700">Isi Pengaduan</label>
-                            <textarea id="isi" name="isi" rows="4" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm focus:border-gray-300 outline-none" placeholder="Tulis pengaduan Anda di sini..."></textarea>
-                        </div>
-
-                        <div class="text-center">
-                            <button type="submit" class="bg-orange-600 text-white px-6 py-2 rounded-md border p-2 hover:bg-orange-700 transition">Kirim Pengaduan</button>
-                        </div>
-                    </form>
-                </div>
+          <div class="flex flex-col md:flex-row gap-4">
+            <div class="flex-1">
+              <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+              <input type="email" id="email" name="email" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm outline-none" placeholder="Masukan email Anda">
             </div>
-        </div>
-    </section>
+            <div class="flex-1">
+              <label for="telepon" class="block text-sm font-medium text-gray-700">Nomor Telepon</label>
+              <input type="tel" id="telepon" name="telepon" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm outline-none" placeholder="08xxxxxxxxxx">
+            </div>
+          </div>
+
+          <div>
+            <label for="judul" class="block text-sm font-medium text-gray-700">Kategori</label>
+            <select id="judul" name="judul" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm outline-none">
+              <option value="">--Pilih Kategori--</option>
+              <option value="Keluhan">Keluhan</option>
+              <option value="Saran">Saran</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="gambar" class="block text-sm font-medium text-gray-700">Lampiran</label>
+            <input type="file" id="gambar" name="gambar" accept="image/*" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm outline-none">
+          </div>
+
+          <div>
+            <label for="isi" class="block text-sm font-medium text-gray-700">Isi Pengaduan</label>
+            <textarea id="isi" name="isi" rows="4" required class="mt-1 block w-full rounded-md border p-2 border-gray-300 shadow-sm outline-none" placeholder="Tulis pengaduan Anda di sini..."></textarea>
+          </div>
+
+          <div class="text-center">
+            <button type="submit" class="bg-orange-600 text-white px-6 py-2 rounded-md hover:bg-orange-700 transition">Kirim Pengaduan</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
