--- a/Tugas_RPL/riwayat_aduan.html
+++ b/Tugas_RPL/riwayat_aduan.html
@@ -35,7 +35,7 @@
       <nav class="flex flex-col w-full md:py-5 py-2 px-4 text-white">
         <div class="flex mb-5 gap-3 items-center">
           <img src="assets/logo_Basdat.png" class="w-11 h-11">
-          <h1 class="md:text-3xl md:text-2xl font-semibold">Sidebar</h1>
+          <h1 class="md:text-3xl text-2xl font-semibold">Sidebar</h1>
         </div>
         <ul class="md:flex flex md:flex-col justify-center flex-row md:gap-4 gap-2">
           <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 rounded transition-all duration-200 hover:bg-gray-200 hover:text-slate-800" href="#">Beranda</a></li>
