--- a/Tugas_RPL/riwayat_aduan.html
+++ b/Tugas_RPL/riwayat_aduan.html
@@ -38,9 +38,9 @@
           <h1 class="md:text-3xl text-2xl font-semibold">Sidebar</h1>
         </div>
         <ul class="md:flex flex md:flex-col justify-center flex-row md:gap-4 gap-2">
-          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 rounded transition-all duration-200 hover:bg-gray-200 hover:text-slate-800" href="#">Beranda</a></li>
-          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 rounded transition-all duration-200 hover:bg-gray-200 hover:text-slate-800" href="aduan.html">Aduan</a></li>
-          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 rounded transition-all duration-200 bg-gray-200 text-slate-800" href="riwayat_aduan.html">Riwayat</a></li>
+          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 md:py-3 rounded transition-all duration-200 hover:bg-gray-200 hover:text-slate-800" href="#">Beranda</a></li>
+          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 md:py-3 rounded transition-all duration-200 hover:bg-gray-200 hover:text-slate-800" href="aduan.html">Aduan</a></li>
+          <li><a class="flex md:border-none border border-gray-100/10 font-medium md:text-[17px] text-sm px-4 py-2 md:py-3 rounded transition-all duration-200 bg-gray-200 text-slate-800" href="riwayat_aduan.html">Riwayat</a></li>
         </ul>
       </nav>
     </div>
